website/css/style.css
body {
	margin: 0 0 0 0;
	background-color: #C0B3A0;
	background-image: url('../images/Music-Wallpaper-Backgrounds-HD.jpg');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
}
#wrapper{
	background-color: #C0B3A0;
	margin: 95px auto 0 auto;
	padding: 5px 5px 27% 25px;
	width: 80%;
}
#header{
	background-color: #22252C;
	color: #FFFFFF;
	width: 100%;
	margin-top: 0px;
	position: fixed;
  left: 0;
  top: 0;
}

#header h1{
	padding: 5px 0 10px 20px;
}

.footer{
	background-color: #3F3250;
	color: #FFFFFF;
	margin-bottom: 0px;
	padding: 5px;
	position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
	text-align: center;
}

div.nav {
	float: right;
	padding: 38px;
}
.nav a{
	background-color: #3F3250;
	border: 2px solid #e14658;
	color: #FFFFFF;
	margin-left: 10px;
	margin-bottom: 20px;
	padding: 5px 5px 5px 5px;
	text-decoration: none;
}

.nav a:hover{
	background-color: #e14658;
	border: 2px solid #FFFFFF;
	color: #22252C;
}

.nav a:active{
	background-color: #FFFFFF;
	border: 2px solid #FFFFFF;
	color: #22252C;
}

ul.things {
	padding-left: 10px;
}

ul.things li {
	list-style-type: none;
}

ul.things li.new {
	margin-top: 20px;
	margin-bottom: 20px;
}

span.author {
	font-size: smaller;
	font-style: italic;
}

div.thingcontainer {
	background-color: #C0C0C0;
	padding: 10px 10px 10px 10px;
	border-radius: 8px;
}

p.thingtitle {
	font-size: larger;
	font-weight: bold;
	margin-bottom: 0px;
}

p.thingtagline {
	margin-top: 0;
	font-size: smaller;
	font-style: italic;
}

p.thingdescription {
	background-color: #D5D5D5;
	padding: 10px 10px 10px 10px;
	border-radius: 8px;
	margin-bottom: 5px;
}

p.thingattachment {
	font-size: smaller;
	font-style: italic;
	text-align: right;
	margin: 0 0 0 0;
}

div.breadcrumbs {
	font-size: smaller;
	margin-bottom: 3px;
}

ul.comments {
	padding-left: 10px;
	list-style-type: none;
}

ul.comments li {
	background: url('images/speechbubble_sm2.png') no-repeat left top;
	height: auto;
	padding-left: 60px;
	padding-top: 3px;
	margin-bottom: 15px;
	min-height: 50px;
}

div form input[type="text"], div form input[type="password"], div form textarea {
	margin-top: 10px;
}

input[type="submit"] {
	margin-top: 10px;
	margin-bottom: 20px;
}

p.footer {
	margin-top: 50px;
}

@media only screen and (min-width: 800px) {
	div.search {
		float: right;
	}
}

p.commentattachment {
	font-size: smaller;
	font-style: italic;
	margin-top: 0;
	margin-bottom: 0;
}

div.error {
	display: inline-block;
	background-color: #ffcccc;
	border-radius: 6px;
	padding: 5px 5px 5px 5px;
	width: auto;
	font-size: smaller;
}

div.message {
	display: inline-block;
	background-color: #ccffcc;
	border-radius: 6px;
	padding: 5px 5px 5px 5px;
	width: auto;
}

div.newattachmenttype {
	background-color: #ccffcc;
}

